ignore project config

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /target/
 *.class
 
-/.classpath
-/.project
-/.settings
+.classpath
+.project
+/.settings/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
