--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,31 @@
 		<url>http://www.gxu.edu.cn</url>
 	</organization>
 	<properties>
-		<v.log4j>1.2.17</v.log4j>
+ 		<v.log4j>1.2.17</v.log4j>
 		<v.commons-io>2.5</v.commons-io>
 		<v.mysql-driver>6.0.5</v.mysql-driver>
 		<v.shiro>1.3.2</v.shiro>
 		<v.junit>4.12</v.junit>
 		<v.json>20160810</v.json>
+		<v.servlet>3.1.0</v.servlet>
 	</properties>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -50,6 +68,11 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>${v.json}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${v.servlet}</version>
 		</dependency>
 	</dependencies>
 </project>
